--- a/scripts/FungalTraits.Rmd
+++ b/scripts/FungalTraits.Rmd
@@ -21,8 +21,6 @@ library(gridExtra)
 library(grid)
 library(gtable)
 library(gt)
-
-library(fungaltraits)
 ```
 
 #path to raw-data directory (change "path" to your raw-data directory)
@@ -43,68 +41,259 @@ source("../R/Greek.R")
 source("../R/html_italic.R")
 ```
 
-#read processed data
-#ITS
-
-```{r import}
-#rarefied_ASV_table
-df_ITS <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/df_rarefied_ITS.csv"), row.names = 1)
-rownames(df_ITS) <- formatC(as.numeric(rownames(df_ITS)), width = 4, flag = "0") #add 0 to rownames
-
-#tax_table
-tax_ITS <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/tax_table2_ITS.csv"), row.names = 1)
-tax_ITS <- as.matrix(tax_ITS)
-
-#phylogenetic tree
-load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/trees.Rdata"))
-treeITS <- tree2
-treeITS_rarefied <- tree_rarefied2
-rm(list = c("tree2", "tree_rarefied2"))
-
-#metadata
-metadata <- read_excel(paste0(path_out, "/data/Sugi/metadata_2306.xlsx"), sheet = "Sheet1")
-metadata <- column_to_rownames(metadata, var = "Sample_Name")
-metadata$cloneID <- as.factor(metadata$cloneID)
-metadata$population <- as.factor(metadata$population)
-metadata$site <- as.factor(metadata$site)
-metadata$date <- as.factor(metadata$date)
-
-#read climate data
-meta_pop <- read.csv(paste0(path_out, "/data/Sugi/pop_climate_pca.csv"))
-meta_pop <- column_to_rownames(meta_pop, var = "X")
-
-#add climatic data
-metadata <- metadata %>%
-  dplyr::select(-c(fullname, latitude, longitude, altitude)) %>%
-  left_join(meta_pop, by = "population")
-rownames(metadata) <- formatC(as.numeric(rownames(metadata)), width = 4, flag = "0")
-```
-
-#phyloseq
+##mytheme
 
 ```{r}
-ps_ITS <- phyloseq(otu_table(t(df_ITS), taxa_are_rows = TRUE),
-                 tax_table(tax_ITS),
-                 sample_data(metadata),
-                 phy_tree(treeITS_rarefied$data))
+#theme settings
+mytheme <-theme(text = element_text(color = "black"), 
+                axis.text = element_text(color = "black"),
+                axis.title.y = element_text(size = 8), 
+                
+                legend.key.size = unit(9, "pt"), 
+                legend.spacing.x = unit(0, "mm"))
 ```
 
 #Guild based on the Kobayashi data
 
 ```{r}
-#load guild data
 path_gs <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/pathogen_Gs.csv"))
 path_gs <- column_to_rownames(path_gs, var = "X")
-load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/phyloseq_pathogen.Rdata"))
+FUNGuild_path <- read_tsv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/FUNGuild/otu_table_Kobayashi.guilds.txt"))
+path_gs_out <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/export/Pathogen_putative.tsv"))
 
-#extract ASVs whose genus is in the Kobayashi data
-ps_Kobayashi <- subset_taxa(ps_ITS, Genus %in% path_gs$Genus)
+load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/phyloseq_pathogen.Rdata"))
 ```
 
-#YET TO BE DONE
+**Important: the database "FungalTraits" is different from "fungal_traits" (also called "fun<sup>fun</sup>").**
+\n**Use "FungalTraitss"**
 
 ```{r}
 #FungalTraits assumes the ITS sequencing data with species-level taxonomic information for guild assignment, but the targeted ASVs are assigned to the genus level taxonomies only.
-#Try using FunGuild
+FunTr <- read.csv(paste0(path_out, "/data/Sugi/FungalTraits/FungalTraits 1.2_ver_16Dec_2020 - V.1.2.csv"))
+
+FunTr_path <- FunTr %>%
+  dplyr::filter(GENUS %in% path_gs_out$Genus) %>%
+  dplyr::select(GENUS, 
+                primary_lifestyle, 
+                Secondary_lifestyle, 
+                Comment_on_lifestyle_template, 
+                Plant_pathogenic_capacity_template, 
+                Decay_substrate_template, 
+                Decay_type_template)
+
+path_gs_both <- dplyr::left_join(path_gs_out, 
+                                 FunTr_path, 
+                                 by = c("Genus" = "GENUS"))
+show(path_gs_both)
 ```
 
+**All of the fungal genera listed in Kobayashi 2007 included plant saprotrophs other than <i>Tremella</i>.**
+#GLM
+##Saprotroph
+
+```{r}
+#subset saprotrophs
+ps_sapro <- subset_taxa(ps_ITS_path, Genus != "Tremella")
+
+#aggregate saprotrophic ASVs
+sapro <- rownames_to_column(data.frame(Saprotroph = sample_sums(ps_sapro)), var = "ID")
+meta_sapro <- data.frame(sample_data(ps_sapro)) %>%
+  dplyr::select(c(site, latitude, PC1_clim, PC2_clim)) %>%
+  rownames_to_column(var = "ID")
+
+pldata_sapro <- left_join(sapro, meta_sapro, by = "ID") %>%
+  column_to_rownames(var = "ID")
+```
+
+```{r}
+#GLM for saprotrophs
+model_sapro <- glm.nb(Saprotroph ~ site + PC1_clim, 
+                      data = pldata_sapro, 
+                      method = "glm.fit", 
+                      link = log)
+
+summary(model_sapro)
+```
+
+###plot
+
+```{r}
+#show prediction and CI for the model with the total abundance tested on PC1_clim
+model_pred <- glm.nb(Saprotroph ~ PC1_clim, 
+                      data = pldata_sapro, 
+                      method = "glm.fit", 
+                      link = log)
+new_data <- data.frame(PC1_clim = seq(min(pldata_sapro$PC1_clim), 
+                                      max(pldata_sapro$PC1_clim), 
+                                      length.out = 100))
+pred <- predict(model_pred, newdata = new_data, type = "link", se.fit = TRUE)
+crit <- qnorm(0.975)  # For 95% confidence intervals
+
+new_data$fit <- exp(pred$fit)
+new_data$lower <- exp(pred$fit - crit * pred$se.fit)
+new_data$upper <- exp(pred$fit + crit * pred$se.fit)
+
+p_sapro <- ggplot(data = pldata_sapro, 
+                 mapping = aes(x = PC1_clim, y = Saprotroph)) + 
+  #scale_color_manual(values = guild$col[sapply(levels(abund_ga$FuncType), grep, guild$FuncType)]) + 
+  geom_line(data = new_data, aes(y = fit), linewidth = 0.7, color = "black") +
+  geom_ribbon(data = new_data, 
+              aes(ymin = lower, ymax = upper, y = fit),
+              alpha = 0.05, linewidth = 0, color = NA, fill = "black") +
+  geom_point() + 
+  theme_classic() + mytheme +
+  xlab("Climatic PC1") + ylab("Abundance of the putative saprotrophic fungi after rarefaction") + 
+  #labs(color = "Putative functional group") + 
+  NULL
+  
+show(p_sapro)
+
+ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/sapro_climate1.png"), 
+       plot = p_sapro, 
+       dpi = 300, width = 160, height = 90, units = "mm")
+```
+
+##Pathogen
+
+```{r}
+#subset the genera which include plant pathogenic fungi
+path_path <- path_gs_both %>%
+  dplyr::filter(grepl("pathogen", primary_lifestyle) |
+                  grepl("pathogen", Secondary_lifestyle) | 
+                  grepl("pathogen", Comment_on_lifestyle_template) | 
+                  grepl("pathogen", Plant_pathogenic_capacity_template))
+
+#subset pathogen ASVs
+ps_path <- subset_taxa(ps_ITS_path, Genus %in% path_path$Genus)
+
+#aggregate saprotrophic ASVs
+pathogen <- rownames_to_column(data.frame(Pathogen = sample_sums(ps_path)), var = "ID")
+meta_path <- data.frame(sample_data(ps_path)) %>%
+  dplyr::select(c(site, latitude, PC1_clim, PC2_clim)) %>%
+  rownames_to_column(var = "ID")
+
+pldata_path <- left_join(pathogen, meta_path, by = "ID") %>%
+  column_to_rownames(var = "ID")
+```
+
+```{r}
+#GLM for saprotrophs
+model_path <- glm.nb(Pathogen ~ site + PC1_clim, 
+                      data = pldata_path, 
+                      method = "glm.fit", 
+                      link = log)
+
+summary(model_path)
+```
+
+###plot
+
+```{r}
+#show prediction and CI for the model with the total abundance tested on PC1_clim
+model_pred <- glm.nb(Pathogen ~ PC1_clim, 
+                      data = pldata_path, 
+                      method = "glm.fit", 
+                      link = log)
+new_data <- data.frame(PC1_clim = seq(min(pldata_path$PC1_clim), 
+                                      max(pldata_path$PC1_clim), 
+                                      length.out = 100))
+pred <- predict(model_pred, newdata = new_data, type = "link", se.fit = TRUE)
+crit <- qnorm(0.975)  # For 95% confidence intervals
+
+new_data$fit <- exp(pred$fit)
+new_data$lower <- exp(pred$fit - crit * pred$se.fit)
+new_data$upper <- exp(pred$fit + crit * pred$se.fit)
+
+p_path <- ggplot(data = pldata_path, 
+                 mapping = aes(x = PC1_clim, y = Pathogen)) + 
+  #scale_color_manual(values = guild$col[sapply(levels(abund_ga$FuncType), grep, guild$FuncType)]) + 
+  geom_line(data = new_data, aes(y = fit), linewidth = 0.7, color = "black") +
+  geom_ribbon(data = new_data, 
+              aes(ymin = lower, ymax = upper, y = fit),
+              alpha = 0.05, linewidth = 0, color = NA, fill = "black") +
+  geom_point() + 
+  theme_classic() + mytheme +
+  xlab("Climatic PC1") + ylab("Abundance of the putative pathogenic fungi after rarefaction") + 
+  #labs(color = "Putative functional group") + 
+  NULL
+  
+show(p_path)
+
+ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/path_climate1.png"), 
+       plot = p_path, 
+       dpi = 300, width = 160, height = 90, units = "mm")
+```
+
+##res_GLM
+
+```{r}
+summary(model_path)
+summary(model_sapro)
+write.csv(cbind(call = paste(summary(model_path)$call, collapse = ", "), 
+                coefficinets = summary(model_path)$coefficients, 
+                aic = summary(model_path)$aic), 
+          paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/glm_plant-pathogen.csv"))
+write.csv(cbind(call = paste(summary(model_sapro)$call, collapse = ", "), 
+                coefficinets = summary(model_sapro)$coefficients, 
+                aic = summary(model_sapro)$aic), 
+          paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/glm_sapro.csv"))
+```
+
+**The results suggested negative correlations between the abundances of both functional groups and PC1_clim.**
+\n**This is because the dominant fungal genera (<i>Trametes</i> and <i>Diaporthe</i>) include both plant pathogenic and saprotrophic species.**
+
+##plot_both
+
+```{r}
+#show the abundances of both putative saprotrophic and pathogenic fungi in the same plot
+pldata_both <- left_join(sapro, pathogen, by = "ID") %>%
+  left_join(meta_sapro, by = "ID") %>%
+  column_to_rownames(var = "ID")
+
+pldata_both <- pldata_both %>%
+  pivot_longer(cols = c("Saprotroph", "Pathogen"), 
+                        names_to = "FuncType", 
+                        values_to = "Abundance")
+```
+
+```{r}
+#show prediction and CI for the model with the total abundance tested on PC1_clim
+model_pred <- glm.nb(Abundance ~ FuncType + PC1_clim, 
+                      data = pldata_both, 
+                      method = "glm.fit", 
+                      link = log)
+new_data <- data.frame(PC1_clim = rep(seq(min(pldata_path$PC1_clim), 
+                                      max(pldata_path$PC1_clim), 
+                                      length.out = 100), 2), 
+                       FuncType = rep(c("Saprotroph", "Pathogen"), each = 100))
+pred <- predict(model_pred, newdata = new_data, type = "link", se.fit = TRUE)
+crit <- qnorm(0.975)  # For 95% confidence intervals
+
+new_data$fit <- exp(pred$fit)
+new_data$lower <- exp(pred$fit - crit * pred$se.fit)
+new_data$upper <- exp(pred$fit + crit * pred$se.fit)
+
+p_both <- ggplot(data = pldata_both, 
+                 mapping = aes(x = PC1_clim, y = Abundance, colour = FuncType, shape = FuncType)) + 
+  scale_color_manual(values = c(Saprotroph = "blue3", Pathogen = "rosybrown2")) + 
+  geom_line(data = new_data, aes(y = fit, colour = FuncType), linewidth = 0.7) +
+  geom_ribbon(data = new_data, 
+              aes(ymin = lower, ymax = upper, y = fit, fill = FuncType),
+              alpha = 0.05, linewidth = 0, color = NA) +
+  geom_point() + 
+  theme_classic() + mytheme +
+  xlab("Climatic PC1") + ylab("Abundance of the putative Japanese-cedar-associated fungi \nafter rarefaction") + 
+  labs(color = "Putative \nfunctional group", 
+       fill = "Putative \nfunctional group", 
+       shape = "Putative \nfunctional group") + 
+  NULL
+  
+show(p_both)
+
+ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/sapro-path_climate1.png"), 
+       plot = p_both, 
+       dpi = 300, width = 160, height = 90, units = "mm")
+```
+
+#YET TO BE DONE*
+**Output a table to show the result of the functional assignment using the FungalTraits database.**
