--- a/scripts/alpha_diversityITS.Rmd
+++ b/scripts/alpha_diversityITS.Rmd
@@ -41,6 +41,9 @@ df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/pro
 rownames(df_rarefied) <- formatC(as.numeric(rownames(df_rarefied)), width = 4, flag = "0") 
 #add 0 to the head of rownames
 
+otu_ITS <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/otus_data_ITS.csv"), row.names = 1)
+rownames(otu_ITS) <- formatC(as.numeric(rownames(otu_ITS)), width = 4, flag = "0") 
+
 tax_table <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/tax_table2_ITS.csv"), row.names = 1)
 tax_table <- as.matrix(tax_table)
 
@@ -59,6 +62,23 @@ location <- read_excel(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/proc
 #merge sample-metadata and population metadata
 metadata_loc <- left_join(metadata, location, by = "population")
 rownames(metadata_loc) <- formatC(as.numeric(rownames(metadata_loc)), width = 4, flag = "0")
+```
+
+#phyloseq
+
+```{r}
+ps_ITS_rf <- phyloseq(otu_table(t(df_rarefied), taxa_are_rows = TRUE), 
+                   tax_table(tax_table), 
+                   sample_data(metadata_loc), 
+                   phy_tree(tree_rarefied2$data))
+
+ps_ITS <- phyloseq(otu_table(t(otu_ITS), taxa_are_rows = TRUE), 
+                   tax_table(tax_table), 
+                   sample_data(metadata_loc), 
+                   phy_tree(tree_rarefied2$data))
+
+sum(apply(df_rarefied > 0, 2, sum) > 0)
+sum(apply(otu_ITS > 0, 2, sum) > 0)
 ```
 
 #phylogenetic distance
