--- a/scripts/DAanalysis_FAPROTAX.Rmd
+++ b/scripts/DAanalysis_FAPROTAX.Rmd
@@ -22,6 +22,7 @@ date: "2026-01-09"
 library(readxl)
 library(phyloseq)
 library(tidyverse)
+library(vegan)
 library(Maaslin2)
 library(SummarizedExperiment)
 library(ggnewscale)
@@ -59,17 +60,7 @@ mytheme <-theme(text = element_text(color = "black"),
 ## ps_object
 
 ```{r}
-load(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/ps_fapro_res_mod.Rdata"))
-
-# Detailed results of FAPROTAX
-FG_overlap <- read_tsv(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/mod/group_overlaps_modc.tsv"))
-FG_g2otus <- read_tsv(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/mod/groups2otus_modc.tsv"))
-
-FG_overlap <- data.frame(FG_overlap) %>% 
-  column_to_rownames(var = "...1")
-FG_g2otus <- data.frame(FG_g2otus) %>% 
-  dplyr::filter(!is.na(`...1`)) %>% 
-  column_to_rownames(var = "...1")
+load(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/ps_fapro_nov.Rdata"))
 ```
 
 ## BVOC
@@ -131,7 +122,7 @@ all_2306_log <- all_2306_log %>%
 
 ```{r}
 #merge metadata
-metadata <- data.frame(sample_data(ps_fapro_res_mod))
+metadata <- data.frame(sample_data(ps_fapro_nov))
 metadata <- metadata %>% 
   dplyr::mutate(sampleID = paste(paste0(substr(site, 1, 1), "2306"), 
                                  samplename, sep = "_")
@@ -142,7 +133,7 @@ metadata <- metadata %>%
 rownames(metadata) <- formatC(as.numeric(rownames(metadata)), width = 4, flag = "0")
 
 # add to phyloseq
-sample_data(ps_fapro_res_mod) <- sample_data(metadata)
+sample_data(ps_fapro_nov) <- sample_data(metadata)
 ```
 
 </div></details>
@@ -153,8 +144,8 @@ sample_data(ps_fapro_res_mod) <- sample_data(metadata)
 ## Whole
 
 ```{r,message=FALSE}
-DA_res <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_res_mod)))[, -93], 
-                   input_metadata = data.frame(sample_data(ps_fapro_res_mod)) %>% 
+DA_res <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_nov)))[, -29], 
+                   input_metadata = data.frame(sample_data(ps_fapro_nov)) %>% 
                      dplyr::select(site), 
                    output = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Whole"), 
                    fixed_effects = c("site"), 
@@ -172,28 +163,27 @@ DA_res <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_res_mod)))[, 
 
 ```{r}
 signif <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Whole/significant_results.tsv"))
-fit <- read_rds(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Whole/fits/fitted.rds"))
-resid <- read_rds(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Whole/fits/residuals.rds"))
 fitdata_tf <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Whole/features/filtered_data_norm_transformed.tsv"))
 fitdata_tf <- data.frame(fitdata_tf) %>% 
   column_to_rownames(var = "feature")
 
 signif <-signif %>% 
-  left_join(data.frame(tax_table(ps_fapro_res_mod)) %>% 
+  left_join(data.frame(tax_table(ps_fapro_nov)) %>% 
               rownames_to_column(var = "feature"), 
             by = "feature")
 
 show(signif)
 ```
 
-**Metabolism-related functions are positively associated with the Kawatabi common garden.**
+**The RAs of some metabolism-related functions are positively associated with the Kawatabi common garden.**
+<br>**The RA of aerobic chemoheterotrophy was negatively assoicated with the Kawtabi common garden.**
 
 ## Kawatabi
 
 ```{r,message=FALSE}
-ps_fapro_k <- subset_samples(ps_fapro_res_mod, site == "Kawatabi")
+ps_fapro_k <- subset_samples(ps_fapro_nov, site == "Kawatabi")
 
-DA_res_k <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_k)))[, -93], 
+DA_res_k <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_k)))[, -29], 
                      input_metadata = data.frame(sample_data(ps_fapro_k)) %>% 
                        dplyr::select(PC1_clim), 
                      output = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Kawatabi"), 
@@ -211,8 +201,6 @@ DA_res_k <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_k)))[, -93]
 
 ```{r}
 signif_k <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Kawatabi/significant_results.tsv"))
-fit_k <- read_rds(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Kawatabi/fits/fitted.rds"))
-resid_k <- read_rds(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Kawatabi/fits/residuals.rds"))
 fitdata_tf_k <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Kawatabi/features/filtered_data_norm_transformed.tsv"))
 fitdata_tf_k <- data.frame(fitdata_tf_k) %>% 
   column_to_rownames(var = "feature")
@@ -225,12 +213,58 @@ signif_k <- signif_k %>%
 show(signif_k)
 ```
 
-## Tsukuba
+**The RAs of metabolism-related functions and intracellualr parasites were positively associated with climatic PC1 in Kawatabi.**
+<br>**The RAs of chemoheterotrophy and ureolysis were negatively associated with climatic PC1.**
+
+### BVOCs
+
+```{r,message=FALSE}
+ps_fapro_VOC <- subset_samples(ps_fapro_k, !is.na(PC1_ter))
+
+DA_res_VOC <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_VOC)))[, -29], 
+                     input_metadata = data.frame(sample_data(ps_fapro_VOC)) %>% 
+                       dplyr::select(PC1_ter, PC2_ter, PC3_ter), 
+                     output = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/BVOC"), 
+                     fixed_effects = c("PC1_ter", "PC2_ter", "PC3_ter"), 
+                     random_effects = NULL, 
+                     analysis_method = "LM", 
+                     transform = "LOG", 
+                     normalization = "NONE", 
+                     min_abundance = 0.0, 
+                     min_prevalence = 0.1, 
+                     max_significance = 0.1, # lower threshold to acount for small sample size
+                     plot_heatmap = TRUE, 
+                     plot_scatter = FALSE)
+```
 
 ```{r}
-ps_fapro_t <- subset_samples(ps_fapro_res_mod, site == "Tsukuba")
+signif_v <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/BVOC/significant_results.tsv"))
+all_v <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/BVOC/all_results.tsv"))
+fitdata_tf_v <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/BVOC/features/filtered_data_norm_transformed.tsv"))
+fitdata_tf_v <- data.frame(fitdata_tf_v) %>% 
+  column_to_rownames(var = "feature")
 
-DA_res_t <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_t)))[, -93], 
+signif_v <- signif_v %>% 
+  left_join(data.frame(tax_table(ps_fapro_VOC)) %>% 
+              rownames_to_column(var = "feature"), 
+            by = "feature")
+all_v <- all_v %>% 
+  left_join(data.frame(tax_table(ps_fapro_VOC)) %>% 
+              rownames_to_column(var = "feature"), 
+            by = "feature")
+
+show(signif_v)
+```
+
+**The RAs of nitrogen fixation (positively associated with climatic PC1) was positively associated with terpene PC1 (less MTs emission) in Kawtabi.**
+<br>**The RAs of aerobic chemoheterotrophy was positively associated with terpene PC3 (more beta-Farnesene emissions).**
+
+## Tsukuba
+
+```{r,message=FALSE}
+ps_fapro_t <- subset_samples(ps_fapro_nov, site == "Tsukuba")
+
+DA_res_t <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_t)))[, -29], 
                      input_metadata = data.frame(sample_data(ps_fapro_t)) %>% 
                        dplyr::select(PC1_clim), 
                      output = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Tsukuba"), 
@@ -248,8 +282,10 @@ DA_res_t <- Maaslin2(input_data = as.data.frame(t(otu_table(ps_fapro_t)))[, -93]
 
 ```{r}
 signif_t <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Tsukuba/significant_results.tsv"))
+all_t <- read_tsv(file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Tsukuba/all_results.tsv"))
 
 show(signif_t)
+show(all_t)
 ```
 
 **No functions were significantly associated with the climatic PC1 in Tsukuba.**
@@ -262,128 +298,13 @@ show(signif_t)
 ```{r}
 show(signif)
 show(signif_k)
+show(signif_v)
 ```
 
-## See overlaps among significant functions
-<details><summary>Overlaps</summary></div>
-
-```{r}
-# FG overlap for significant functions
-FG_overlap_w <- FG_overlap %>% 
-  dplyr::filter(rownames(FG_overlap) %in% signif$group) %>% 
-  dplyr::select(sort(signif$group)) %>% 
-  rownames_to_column(var = "group") %>% 
-  dplyr::arrange(group) %>% 
-  column_to_rownames(var = "group")
-
-# Kawatabi-specific results
-FG_overlap_k <- FG_overlap %>% 
-  dplyr::filter(rownames(FG_overlap) %in% signif_k$group) %>% 
-  dplyr::select(sort(signif_k$group)) %>% 
-  rownames_to_column(var = "group") %>% 
-  dplyr::arrange(group) %>% 
-  column_to_rownames(var = "group")
-```
-
-```{r}
-# overlap based on relative abundances
-FG_overlap_ab_w <- ps_fapro_res_mod %>% 
-  prune_taxa(taxa = signif$feature) %>% # keep only significant functions
-  otu_table() %>% 
-  data.frame() %>% 
-  rownames_to_column(var = "feature") %>% # convert features to groups
-  left_join(signif %>% 
-              dplyr::select(feature, group), 
-            by = "feature") %>% 
-  column_to_rownames(var = "group") %>% # keep groups as rownames
-  dplyr::select(-feature) %>% 
-  vegdist(method = "bray") %>% 
-  as.matrix()
-FG_overlap_ab_w <- data.frame(1 - FG_overlap_ab_w)
-
-FG_overlab_ab_k <- ps_fapro_k %>% 
-  prune_taxa(taxa = signif_k$feature) %>% # keep only significant functions
-  otu_table() %>% 
-  data.frame() %>% 
-  rownames_to_column(var = "feature") %>% # convert features to groups
-  left_join(signif_k %>% 
-              dplyr::select(feature, group), 
-            by = "feature") %>% 
-  column_to_rownames(var = "group") %>% # keep groups as rownames
-  dplyr::select(-feature) %>% 
-  vegdist(method = "bray") %>% 
-  as.matrix()
-FG_overlab_ab_k <- data.frame(1 - FG_overlab_ab_k)
-```
-
-### heatmap
-
-```{r}
-# whole data
-heat_w <- ggplot(data = FG_overlap_w %>%  
-                   rownames_to_column(var = "groups_r")%>% 
-                   pivot_longer(names_to = "groups_c", values_to = "overlaps", cols = -groups_r), 
-                 mapping = aes(x = groups_c, y = groups_r, fill = overlaps)) + 
-  geom_tile(color = "white") + 
-  theme_classic(base_size = 12) + 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-show(heat_w)
-
-# kawatabi
-heat_k <- ggplot(data = FG_overlap_k %>%  
-                   rownames_to_column(var = "groups_r")%>% 
-                   pivot_longer(names_to = "groups_c", values_to = "overlaps", cols = -groups_r), 
-                 mapping = aes(x = groups_c, y = groups_r, fill = overlaps)) + 
-  geom_tile(color = "white") + 
-  theme_classic(base_size = 12) + 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-show(heat_k)
-
-ggsave(filename = paste0(path_out, 
-                         "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Kawatabi/figures/FG_overlap_k.png"), 
-       plot = heat_k, 
-       width = 160, height = 120, units = "mm", dpi = 300)
-```
-
-### heatmap based on relative abundances
-
-```{r}
-# whole data
-df_heat <- FG_overlap_ab_w %>%  
-  rownames_to_column(var = "groups_r")%>% 
-  pivot_longer(names_to = "groups_c", values_to = "overlaps", cols = -groups_r)
-heat_ab_w <- ggplot(data = df_heat, 
-                 mapping = aes(x = groups_c, y = groups_r, fill = overlaps)) + 
-  geom_tile(color = "white") + 
-  theme_classic(base_size = 12) + 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-show(heat_ab_w)
-
-# kawatabi
-df_heat_k <- FG_overlab_ab_k %>%  
-  rownames_to_column(var = "groups_r")%>% 
-  pivot_longer(names_to = "groups_c", values_to = "overlaps", cols = -groups_r)
-heat_ab_k <- ggplot(data = df_heat_k, 
-                 mapping = aes(x = groups_c, y = groups_r, fill = overlaps)) + 
-  geom_tile(color = "white") + 
-  theme_classic(base_size = 12) + 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-show(heat_ab_k)
-
-ggsave(filename = paste0(path_out, 
-                         "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/Kawatabi/figures/FG_overlap_k_RA.png"), 
-       plot = heat_ab_k, 
-       width = 160, height = 120, units = "mm", dpi = 300)
-```
-
-**Human_pathogens_all and human_associated was completely matched.**
-<br>**Major methanotroph/methylotroph/hydrocarbon-degradator is probably the same, resulting in > 90% overlap in RA.**
-<br>**Major human_associated bacteria and animal_parasites is probably the same.**
-<br>**Treat them as the same functions.**
-
-</div></details>
+**Overall, the reverse of homeground advantage effect may exist in the climate clines of bacterial functions. That is, functions that were abundant in the warmer gardens were less abundant on trees from warmer population.**
 
 ## scatter plot
+###Kawatabi
 
 ```{r}
 pldata_tf_k <- fitdata_tf_k %>% 
@@ -410,8 +331,8 @@ for (i in 1:length(features_sig)) {
                 color = 'blue', 
                 na.rm = TRUE) + 
     xlab("Climatic PC1") + 
-    ylab(bquote("Log2 relative abundance of " ~ .(signif_k[signif_k$feature == features_sig[i], ]$group))) + 
-    theme_classic(base_size = 12)
+    ylab(bquote({Log[2]} ~ "relative abundance of" ~ .(gsub("_", " ", signif_k[signif_k$feature == features_sig[i], ]$group)))) + 
+    theme_classic(base_size = 12) + mytheme
   
   plots[[i]] <- p
   ggsave(filename = paste0(path_out, 
@@ -422,5 +343,88 @@ for (i in 1:length(features_sig)) {
 }
 
 names(plots) <- signif_k$group
-plots[["methylotrophy"]]
+plots[["aerobic_chemoheterotrophy"]]
 ```
+
+### BVOC
+
+```{r}
+pldata_tf_v <- fitdata_tf_v %>% 
+  dplyr::select(signif_v$feature) %>% 
+  rownames_to_column(var = "rownames") %>% 
+  left_join(data.frame(sample_data(ps_fapro_VOC)) %>% 
+              rownames_to_column(var = "rownames") %>% 
+              dplyr::select(rownames, PC1_ter, PC3_ter), 
+            by = "rownames") %>% 
+  pivot_longer(names_to = "feature", values_to = "log2RA", cols = -c(rownames, PC1_ter, PC3_ter))
+```
+
+```{r}
+features_sig_v <- signif_v %>% 
+  dplyr::select(feature, value)
+plots_v <- list()
+
+for (i in 1:length(features_sig_v)) {
+  p <- ggplot(data = pldata_tf_v %>% dplyr::filter(feature == features_sig_v[i, ]$feature), 
+              mapping = aes(x = eval(parse(text = features_sig_v[i, ]$value)), y = log2RA)) + 
+    geom_point() + 
+    stat_smooth(method = "glm", 
+                linewidth = 0.5, 
+                color = 'blue', 
+                na.rm = TRUE) + 
+    xlab(bquote("Terpene" ~ 
+                  .(sapply(
+                    str_split(features_sig_v[i, ]$value, "_"), `[`, 1)
+                    )
+                )
+         ) + 
+    ylab(bquote({Log[2]} ~ 
+                  "relative abundance of" ~ 
+                  .(
+                    gsub("_", " ", signif_v[signif_v$feature == features_sig_v[i, ]$feature, ]$group)
+                    )
+                )
+         ) + 
+    theme_classic(base_size = 12) + mytheme
+  
+  plots_v[[i]] <- p
+  ggsave(filename = paste0(path_out, 
+                           "/231202_Sugi_phyllosphere_June_16S/processed_data/DA/Maaslin2/BVOC/figures/", 
+                           signif_v[signif_v$feature == features_sig_v[i, ]$feature, ]$group, ".png"), 
+         plot = p, 
+         width = 160, height = 120, units = "mm", dpi = 300)
+}
+
+plots_v[[1]]
+plots_v[[2]]
+```
+
+**Plots_v[[1]] is a wrong plot. Saved plot is correct. Cause unknown.**
+<br>**Below is the correct plot.**
+
+```{r}
+p <- ggplot(data = pldata_tf_v %>% dplyr::filter(feature == features_sig_v[1, ]$feature), 
+              mapping = aes(x = eval(parse(text = features_sig_v[1, ]$value)), y = log2RA)) + 
+    geom_point() + 
+    stat_smooth(method = "glm", 
+                linewidth = 0.5, 
+                color = 'blue', 
+                na.rm = TRUE) + 
+    xlab(bquote("Terpene" ~ 
+                  .(sapply(
+                    str_split(features_sig_v[1, ]$value, "_"), `[`, 1)
+                    )
+                )
+         ) + 
+    ylab(bquote({Log[2]} ~ 
+                  "relative abundance of" ~ 
+                  .(
+                    gsub("_", " ", signif_v[signif_v$feature == features_sig_v[1, ]$feature, ]$group)
+                    )
+                )
+         ) + 
+    theme_classic(base_size = 12) + mytheme
+
+show(p)
+```
+
